action group 활성/비활성화 시 action 캐시 초기화 기능 추가